--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -306,7 +306,45 @@
             "title": "Goals"
         },
         "notes": {
-            "title": "Notes"
+            "title": "Notes",
+            "form": {
+                "title": {
+                    "edit": "Edit Note",
+                    "new": "New Note"
+                },
+                "fields": {
+                    "title": {
+                        "label": "Title",
+                        "placeholder": "Note title"
+                    },
+                    "content": {
+                        "label": "Content",
+                        "placeholder": "Note content"
+                    }
+                }
+            },
+            "delete": {
+                "title": "Delete Note",
+                "confirmMessage": "Are you sure you want to delete this note?",
+                "warning": "This action cannot be undone"
+            },
+            "list": {
+                "noNotes": "No notes created",
+                "selectNote": "Select a note to view its content",
+                "createNote": "Create note",
+                "noTitle": "No title"
+            },
+            "success": {
+                "created": "Note created successfully",
+                "updated": "Note saved successfully",
+                "deleted": "Note deleted successfully"
+            },
+            "errors": {
+                "loadingError": "Error loading notes",
+                "createError": "Error creating note",
+                "updateError": "Error saving note",
+                "deleteError": "Error deleting note"
+            }
         }
     }
 }
