--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -9,7 +9,9 @@
             "delete": "Eliminar",
             "cancel": "Cancelar",
             "close": "Cerrar",
+            "confirm": "Confirmar",
             "loading": "Cargando...",
+            "logout": "Cerrar sesión",
             "noData": "No hay datos disponibles",
             "colors": {
                 "background": "Color de fondo",
@@ -96,7 +98,88 @@
                 "fullYear": "Año completo"
             }
         },
-        "settings": {},
+        "settings": {
+            "userSettings": {
+                "title": "Configuración de usuario",
+                "profileImage": "Imagen de perfil",
+                "profileImageError": "El tamaño de la imagen debe ser menor que 8MB",
+                "profileImageSuccess": "Imagen de perfil actualizada correctamente",
+                "uploadImage": "Cargar imagen",
+                "uploadImageError": "Error al cargar la imagen",
+                "deleteImage": "Eliminar imagen",
+                "deleteImageSuccess": "Imagen de perfil eliminada correctamente",
+                "deleteImageError": "Error al eliminar la imagen",
+                "changeImage": "Cambiar imagen",
+                "settingsUpdatedSuccess": "Configuraciones actualizadas correctamente",
+                "settingsUpdatedError": "Error al actualizar las configuraciones",
+                "preferences": "Preferencias",
+                "personalInformation": "Información personal",
+                "name": "Nombre",
+                "surname": "Apellido",
+                "language": "Idioma",
+                "currency": "Moneda",
+                "dateFormat": "Formato de fecha",
+                "timeFormat": "Formato de hora",
+                "saveChanges": "Guardar cambios",
+                "saving": "Guardando..."
+            },
+            "help": {
+                "title": "Ayuda",
+                "faq": "Preguntas frecuentes",                
+                "howToStart": "¿Cómo empezar a usar Profit & Lost?",
+                "howToStartDescription": "Empezar con Profit & Lost es muy fácil:",
+                "howToStartStep1": "1. Personaliza tus preferencias iniciales para adaptarlas a tus necesidades.",
+                "howToStartStep2": "2. Ve a la sección 'Informes anuales' y crea tus categorías para organizar tus movimientos financieros.",
+                "howToStartStep3": "3. En 'Movimientos', comienza a registrar tus ingresos y gastos para mantener un control detallado.",                
+                "manageAccounts": "¿Cómo gestionar mis cuentas?",
+                "manageAccountsDescription": "En la sección 'Cuentas', tienes control total sobre tus cuentas. Puedes:",
+                "manageAccountsStep1": "1. Crear nuevas cuentas para diferentes propósitos (e.g. cuentas bancarias, ahorros, etc.).",
+                "manageAccountsStep2": "2. Edit existing accounts to adjust details like name or configuration.",
+                "manageAccountsStep3": "3. Customize each account with unique colors to easily identify it.",
+                "manageAccountsStep4": "4. Delete accounts that you no longer need.",
+                "manageAccountsStep5": "5. Ocultar cuentas que no quieres ver en tus informes.",
+                "categoriesWork": "¿Cómo funcionan las categorías?",
+                "categoriesWorkDescription": "Las categorías son la clave para mantener tus finanzas organizadas. Con ellas puedes:",
+                "categoriesWorkStep1": "1. Crear categorías personalizadas según tus necesidades.",
+                "categoriesWorkStep2": "2. Asignarles colores para identificarlas fácilmente en tus gráficos y informes.",
+                "categoriesWorkStep3": "3. Usarlas para clasificar y analizar tus movimientos financieros de manera efectiva.",
+                "protectData": "¿Cómo proteger mis datos en Profit & Lost?",
+                "protectDataDescription": "Profit & Lost prioriza la seguridad de tus datos:",
+                "protectDataStep1": "1. Todas las informaciones están encriptadas para garantizar su protección.",
+                "protectDataStep2": "2. Puedes cambiar tu contraseña en cualquier momento desde la sección 'Seguridad y privacidad'.",
+                "protectDataStep3": "3. Activa la autenticación en dos pasos para mayor seguridad.",                
+                "viewReports": "¿Cómo ver mis informes financieros?",
+                "viewReportsDescription": "En la sección 'Informes', puedes generar informes detallados que incluyen:",
+                "viewReportsStep1": "1. Resúmenes mensuales o anuales de tus movimientos.",
+                "viewReportsStep2": "2. Análisis gráfico de tus gastos y ingresos por categoría.",
+                "viewReportsStep3": "3. Descargar informes en formatos como PDF o Excel para su revisión en cualquier momento.",
+                "mobileUsage": "¿Puedo usar Profit & Lost en mi móvil?",
+                "mobileUsageDescription": "¡Sí! Profit & Lost está optimizado para dispositivos móviles. Solo necesitas acceder a nuestra plataforma desde tu navegador móvil ingresando profit-lost.com para disfrutar de todas las funciones.",
+                "mobileUsageStep1": "Puedes poner el acceso directo a nuestra web en tu pantalla de inicio para que aparezca como una aplicación en tu dispositivo.",
+                "contactSupport": "¿Cómo contactar con el soporte?",
+                "contactSupportDescription": "Nuestro equipo de soporte está aquí para ayudarte. Puedes contactarnos a través de:",
+                "contactSupportStep1": "Email: support@profit-lost.com",
+                "contactSupportStep2": "Consulta nuestra documentación en línea para encontrar guías detalladas y soluciones rápidas."
+            },
+            "securityPrivacy": {
+                "title": "Seguridad y privacidad",
+                "passwordsDoNotMatch": "Las contraseñas no coinciden",
+                "passwordUpdatedSuccess": "Contraseña actualizada correctamente",
+                "passwordUpdatedError": "Error al actualizar la contraseña",
+                "usernameDoesNotMatch": "El nombre de usuario no coincide",
+                "changePassword": "Cambiar contraseña",
+                "currentPassword": "Contraseña actual",
+                "newPassword": "Nueva contraseña",
+                "confirmNewPassword": "Confirmar nueva contraseña",
+                "updatePassword": "Actualizar contraseña",
+                "deleteAccount": "Eliminar cuenta",
+                "deleteAccountConfirmation": "Esta acción es irreversible. Todos tus datos serán eliminados permanentemente.",
+                "deleteConfirmation": "Para confirmar, escribe tu nombre de usuario:",
+                "deleteAccountSuccess": "Cuenta eliminada correctamente",
+                "deleteAccountError": "Error al eliminar la cuenta",
+                "username": "Nombre de usuario"
+            }
+        },
         "dashhome": {
             "title": "Dashboard",
             "balance": {
@@ -301,9 +384,6 @@
                 "deleteError": "Error al eliminar el movimiento",
                 "invalidData": "Datos de movimiento inválidos"
             }
-        },
-        "goals": {
-            "title": "Objetivos"
         },
         "notes": {
             "title": "Notas",
