feat: Inicio de sesión con google
+Si ya hay un usuario que inicio sesion con el mismo correo de google los vincula

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -63,7 +63,8 @@
                 "DUPLICATE_CATEGORY": "Categoría ya existe",
                 "CATEGORY_IN_USE": "Categoría en uso y no puede ser eliminada",
                 "CATEGORY_NOT_FOUND": "Categoría no encontrada",
-                "NOTE_NOT_FOUND": "Nota no encontrada"
+                "NOTE_NOT_FOUND": "Nota no encontrada",
+                "GOOGLE_AUTH_ERROR": "Error de autenticación de Google"
             },
             "monthNames": {
                 "Jan": "Enero",
