--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -63,7 +63,8 @@
                 "DUPLICATE_CATEGORY": "Category already exists",
                 "CATEGORY_IN_USE": "Category is in use and cannot be deleted",
                 "CATEGORY_NOT_FOUND": "Category not found",
-                "NOTE_NOT_FOUND": "Note not found"
+                "NOTE_NOT_FOUND": "Note not found",
+                "GOOGLE_AUTH_ERROR": "Google authentication error"
             },
             "monthNames": {
                 "Jan": "January",
