Corrección de error al actualizar perfil (photo y preferencias)
+No permitir NAME vacio

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -116,6 +116,7 @@
                 "preferences": "Preferences",
                 "personalInformation": "Personal Information",
                 "name": "Name",
+                "nameRequired": "The name is required",
                 "surname": "Surname",
                 "language": "Language",
                 "currency": "Currency",
